fixed mobile navoptio nspacing

--- a/src/components/header/header.styles.css
+++ b/src/components/header/header.styles.css
@@ -67,7 +67,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
     position: absolute;
     top: 25px;
     left: -100%;
@@ -87,6 +86,7 @@
     transition: all 0.5s ease;
     z-index: 1;
     align-content: center;
+    gap: 25px;
   }
   .option-mobile {
     display: block;
@@ -117,7 +117,7 @@
     display: none;
   }
   .option {
-    margin-top: 30px;
+    margin-top: 12px;
     font-weight: 400;
     /* border: 1px solid black; */
   }
